--- a/angular-project/src/app/navegacao/menu/menu.component.html
+++ b/angular-project/src/app/navegacao/menu/menu.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Pessoa</a>
+          <a class="nav-link" [routerLink]="['/pessoa']" >Pessoa</a>
           <a class="nav-link" href="#">Pet</a>
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Desabilitado</a>
         </div>
