--- a/angular-project/src/app/pessoa/listagem/pessoas.component.html
+++ b/angular-project/src/app/pessoa/listagem/pessoas.component.html
@@ -1,6 +1,32 @@
 <div class="container main-container">
     <h4>Pessoas Cadastradas</h4>
     <hr/>
+    <div class="float-end">
+        <button type="button" class="btn btn-sm btn-primary" disabled>Adicionar</button>
+    </div>
 
-    <app-pessoa *ngFor="let pessoa of pessoas" [pessoa]="pessoa"></app-pessoa>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Nome</th>
+            <!-- <th scope="col">Data Nascimento</th> -->
+            <th scope="col">Email</th>
+            <th scope="col">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- <app-pessoa *ngFor="let pessoa of pessoas" [pessoa]="pessoa"></app-pessoa> -->
+          <tr *ngFor="let pessoa of pessoas">
+            <th scope="row">{{ pessoa.id }}</th>
+            <td>{{ pessoa.nome }}</td>
+            <!-- <td>{{ pessoa?.dataNascimento }}</td> -->
+            <td>{{ pessoa.cpf }}</td>
+            <td>
+                <button type="button" class="btn btn-sm btn-warning" disabled>Editar</button>
+                <button type="button" class="btn btn-sm btn-danger" style="margin-left:10px;" disabled>Excluir</button>
+            </td>
+        </tr>
+        </tbody>
+      </table>
 </div>
