evento click excluir chegando no componente

--- a/angular-project/src/app/pessoa/listagem/components/pessoa.component.html
+++ b/angular-project/src/app/pessoa/listagem/components/pessoa.component.html
@@ -1,4 +1,6 @@
-<div class="container main-container">
-    Nome: {{ pessoa?.nome }} <br>
-    Cpf: {{ pessoa?.cpf }}
-</div>
+<tr>
+    <th scope="row">{{ pessoa?.id }}</th>
+    <td>{{ pessoa?.nome }}</td>
+    <!-- <td>{{ pessoa?.dataNascimento }}</td> -->
+    <td>{{ pessoa?.cpf }}</td>
+</tr>
