--- a/angular-project/src/app/pessoa/listagem/pessoas.component.html
+++ b/angular-project/src/app/pessoa/listagem/pessoas.component.html
@@ -34,7 +34,7 @@
   <div class="row text-center">
     
     <div *ngFor="let pessoa of pessoas;" class="col-md-4" style="padding-bottom: 30px;">
-      <app-pessoa-card-detalhe [pessoa]="pessoa"></app-pessoa-card-detalhe>
+      <app-pessoa-card-detalhe [pessoa]="pessoa" (id)="excluirPessoa($event)" ></app-pessoa-card-detalhe>
     </div>
 
   </div>
