Tratamento de erro 404 - not found no roteamento

--- a/angular-project/src/app/pessoa/listagem/components/pessoa-card-detalhe.component.html
+++ b/angular-project/src/app/pessoa/listagem/components/pessoa-card-detalhe.component.html
@@ -3,7 +3,7 @@
       <img src="/assets/unknown.jpg" height="164px" width="253px;"/>
     </div>
 
-    <h4 class="card-title">{{ pessoa?.nome | titlecase }}</h4>
+    <h4 class="card-title">{{ pessoa.nome | titlecase }}</h4>
 
     <div class="card-footer">
         <button type="button" class="btn btn-sm btn-warning" disabled>Editar</button>
