--- a/angular-project/src/app/navegacao/menu/menu.component.html
+++ b/angular-project/src/app/navegacao/menu/menu.component.html
@@ -1,16 +1,27 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">AngularProject</a>
+    <div class="container container-fluid">
+      <a class="navbar-brand" [routerLink]="['/home']">AngularProject</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" [routerLink]="['/pessoa']" >Pessoa</a>
-          <a class="nav-link" href="#">Pet</a>
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Desabilitado</a>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup" class="float-end">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item" *ngFor="let item of nav">
+            <a class="nav-link" routerLinkActive="router-link-active" [routerLink]="item.path" [routerLinkActiveOptions]="{ exact: item.exact}" >{{ item.name }}</a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" routerLinkActive="router-link-active" [routerLink]="['/home']" >Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="router-link-active" [routerLink]="['/pessoa']" >Pessoa</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLinkActive="router-link-active" href="#">Pet</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Desabilitado</a>
+          </li> -->
+        </ul>
       </div>
     </div>
   </nav>
