--- a/angular-project/src/app/pessoa/listagem/components/pessoa-card-detalhe.component.html
+++ b/angular-project/src/app/pessoa/listagem/components/pessoa-card-detalhe.component.html
@@ -6,7 +6,7 @@
     <h4 class="card-title">{{ pessoa.nome | titlecase }}</h4>
 
     <div class="card-footer">
-        <button type="button" class="btn btn-sm btn-warning" disabled>Editar</button>
+        <button type="button" class="btn btn-sm btn-warning" [routerLink]="['editar/', pessoa.id]" routerLinkActive="router-link-active" >Editar</button>
         <button type="button" class="btn btn-sm btn-danger" style="margin-left:10px;" (click)="excluirPessoa(pessoa.id)">Excluir</button>
     </div>
 
