--- a/angular-project/src/app/navegacao/menu/menu.component.html
+++ b/angular-project/src/app/navegacao/menu/menu.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup" class="float-end">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item" *ngFor="let item of nav">
-            <a class="nav-link" routerLinkActive="router-link-active" [routerLink]="item.path" [routerLinkActiveOptions]="{ exact: item.exact}" >{{ item.name }}</a>
+            <a class="nav-link" routerLinkActive="active" [routerLink]="item.path" [routerLinkActiveOptions]="{ exact: item.exact }" >{{ item.name }}</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" routerLinkActive="router-link-active" [routerLink]="['/home']" >Home</a>
