navegação imperativa com router api

--- a/angular-project/src/app/pessoa/edicao/edit-pessoa/edit-pessoa.component.html
+++ b/angular-project/src/app/pessoa/edicao/edit-pessoa/edit-pessoa.component.html
@@ -1,3 +1,7 @@
 <div class="container">
     <p>edit-pessoa works!</p>
+
+    <div class="row">
+        <button type="button" class="btn btn-sm btn-success" (click)="salvar()">Salvar</button>
+    </div>
 </div>
