Get e GetById da api .net core

--- a/angular-project/src/app/pessoa/edicao/edit-pessoa/edit-pessoa.component.html
+++ b/angular-project/src/app/pessoa/edicao/edit-pessoa/edit-pessoa.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <p>edit-pessoa works!</p>
-
+    Id: {{pessoa?.id}}<br>
+    Nome: {{pessoa?.nome}}
     <div class="row">
         <button type="button" class="btn btn-sm btn-success" (click)="salvar()">Salvar</button>
     </div>
