--- a/angular-project/src/app/pessoa/cadastro/cad-pessoa.component.html
+++ b/angular-project/src/app/pessoa/cadastro/cad-pessoa.component.html
@@ -19,7 +19,7 @@
                 <span class="text-danger" *ngIf="formGroup.get('dataNascimento')?.errors?.required && (formGroup.get('dataNascimento')?.dirty || formGroup.get('dataNascimento')?.touched)">Obrigatório!</span>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="form-group col-md-4">
                 <label class="label-control" for="email">Email</label>
                 <input type="email" class="form-control" formControlName="email" id="email"
@@ -28,10 +28,11 @@
                 <span class="text-danger" *ngIf="formGroup.get('email')?.errors?.required && (formGroup.get('email')?.dirty || formGroup.get('email')?.touched)">Obrigatório!</span>
                 <span class="text-danger" *ngIf="formGroup.get('email')?.errors?.email && (formGroup.get('email')?.dirty || formGroup.get('email')?.touched)">Inválido!</span>
             </div>
-        </div>
+        </div> -->
 
         <div class="row">
             <div class="form-group col-md-4">
+                <button type="button" class="btn btn-primary" id="btnVoltar" [routerLink]="['/pessoa']" routerLinkActive="router-link-active">Voltar</button>&nbsp;
                 <button type="submit" class="btn btn-success" id="submit" [disabled]="!formGroup.valid">Salvar</button>
             </div>
         </div>
